[package]
name = "sitemap-writer"
version = "1.0.1"
edition = "2024"
authors = ["uiuifree"]
description = "A simple and lightweight Rust library for generating XML sitemaps"
license = "MIT"
keywords = ["sitemap", "xml", "seo", "writer", "web"]
categories = ["web-programming", "encoding", "parser-implementations"]

readme = "README.md"
repository = "https://github.com/uiuifree/rust-sitemap-writer"
documentation = "https://docs.rs/sitemap-writer"
homepage = "https://github.com/uiuifree/rust-sitemap-writer"

[dependencies]
html-escape="0.2.13"